@@ -90,6 +90,8 @@
     <spu-dma-channel enabled="yes">2</spu-dma-channel>
   </cell>
 
+  <sampling enabled="no" type="default" period="50m" variability="10m"/>
+
   <merge enabled="yes" 
     synchronization="default"
     binary="mpi_ping"
