@@ -1,3 +1,3 @@
 \begin{verbatim}
-<sampling enabled="no" type="default" period="50m" />
+<sampling enabled="no" type="default" period="50m" variability="10m"/>
 \end{verbatim}
