@@ -107,9 +107,11 @@ This appendix presents the environment variables the \TRACE package uses if {\tt
   \hline
   EXTRAE\_SAMPLING\_CALLER & Determines the callstack segment stored through time-sampling capabilities.\\
   \hline
+  EXTRAE\_SAMPLING\_CLOCKTYPE & Determines domain for sampling clock. Options are: DEFAULT, REAL, VIRTUAL and PROF.\\
+  \hline
   EXTRAE\_SAMPLING\_PERIOD & Enable time-sampling capabilities with the indicated period.\\
   \hline
-  EXTRAE\_SAMPLING\_CLOCKTYPE & Determines domain for sampling clock. Options are: DEFAULT, REAL, VIRTUAL and PROF.\\
+  EXTRAE\_SAMPLING\_VARIABILITY & Adds some variability to the sampling period.\\
   \hline
   EXTRAE\_RUSAGE & Instrumentation emits resource usage at flush points if set to 1.\\
   \hline
