@@ -1,5 +1,6 @@
 \documentclass[twoside,a4,english,11pt]{book}
 
+\usepackage{hyperref}
 \usepackage{fontenc}
 \usepackage[latin9]{inputenc}
 \usepackage{url}
