@@ -59,7 +59,7 @@
 		<minimum-time enabled="no">10M</minimum-time>
 	</others>
 
-	<sampling enabled="no" type="default" period="50m" />
+	<sampling enabled="no" type="default" period="50m" variability="10m" />
 
 	<merge enabled="yes" 
 		synchronization="default"
