@@ -36,7 +36,7 @@
     <circular enabled="no" />
   </buffer>
 
-  <sampling enabled="no" type="default" period="50m" />
+  <sampling enabled="no" type="default" period="50m" variability="10m" />
 
   <merge enabled="yes" 
     synchronization="default"
