@@ -6,6 +6,7 @@ ChangeLog
              Don't require MPI to generate the MPI communicators within the
                PRV file (MFB 2.3)
              MPI statistics (burst mode) were calculated incorrectly, 1 missing
+             Add variability to the sampling period
  * 13Feb2013 Removes duplicate creation of temporal files (MFB 2.3)
              Actually Fixed SendRecv communication (refixes 06Feb2013) (MFB
                2.3)
